feat: Configure Google AdSense publisher ID
Updates the Google AdSense publisher ID in the environment configuration, HTML, and React component to enable ad display for Ibkane IA.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <link rel="apple-touch-icon" href="https://picsum.photos/seed/ibkane/180/180" />
     
     <!-- Google AdSense -->
-    <script id="adsense-script" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ID" crossorigin="anonymous"></script>
+    <script id="adsense-script" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8106079340317111" crossorigin="anonymous"></script>
     
     <script>
       // Mise à jour dynamique de l'ID AdSense si configuré
-      const pubId = "YOUR_ID"; // À remplacer par votre ID ca-pub-XXXX
+      const pubId = "8106079340317111"; // Votre ID ca-pub-XXXX
       if (pubId !== "YOUR_ID") {
         const script = document.getElementById('adsense-script');
         if (script) {
